// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts valid hostnames 1`] = `
Object {
  "host": "www.example.com",
}
`;

exports[`accepts valid hostnames 2`] = `
Object {
  "host": "8.8.8.8",
}
`;

exports[`accepts valid hostnames 3`] = `
Object {
  "host": "::1",
}
`;

exports[`accepts valid hostnames 4`] = `
Object {
  "host": "localhost",
}
`;

exports[`has defaults for config 1`] = `
Object {
  "autoListen": true,
  "compression": Object {
    "enabled": true,
  },
  "cors": false,
  "host": "localhost",
  "keepaliveTimeout": 120000,
  "maxPayload": ByteSizeValue {
    "valueInBytes": 1048576,
  },
  "port": 5601,
  "rewriteBasePath": false,
  "socketTimeout": 120000,
  "ssl": Object {
    "cipherSuites": Array [
      "ECDHE-RSA-AES128-GCM-SHA256",
      "ECDHE-ECDSA-AES128-GCM-SHA256",
      "ECDHE-RSA-AES256-GCM-SHA384",
      "ECDHE-ECDSA-AES256-GCM-SHA384",
      "DHE-RSA-AES128-GCM-SHA256",
      "ECDHE-RSA-AES128-SHA256",
      "DHE-RSA-AES128-SHA256",
      "ECDHE-RSA-AES256-SHA384",
      "DHE-RSA-AES256-SHA384",
      "ECDHE-RSA-AES256-SHA256",
      "DHE-RSA-AES256-SHA256",
      "HIGH",
      "!aNULL",
      "!eNULL",
      "!EXPORT",
      "!DES",
      "!RC4",
      "!MD5",
      "!PSK",
      "!SRP",
      "!CAMELLIA",
    ],
    "clientAuthentication": "none",
    "enabled": false,
    "supportedProtocols": Array [
      "TLSv1.1",
      "TLSv1.2",
    ],
  },
}
`;

exports[`throws if basepath appends a slash 1`] = `"[basePath]: must start with a slash, don't end with one"`;

exports[`throws if basepath is missing prepended slash 1`] = `"[basePath]: must start with a slash, don't end with one"`;

exports[`throws if basepath is not specified, but rewriteBasePath is set 1`] = `"cannot use [rewriteBasePath] when [basePath] is not specified"`;

exports[`throws if invalid hostname 1`] = `"[host]: value is [asdf$%^] but it must be a valid hostname (see RFC 1123)."`;

exports[`with TLS throws if TLS is enabled but \`redirectHttpFromPort\` is equal to \`port\` 1`] = `"Kibana does not accept http traffic to [port] when ssl is enabled (only https is allowed), so [ssl.redirectHttpFromPort] cannot be configured to the same value. Both are [1234]."`;

exports[`with compression accepts valid referrer whitelist 1`] = `
Array [
  "www.example.com",
  "8.8.8.8",
  "::1",
  "localhost",
]
`;

exports[`with compression throws if invalid referrer whitelist 1`] = `"[compression.referrerWhitelist.0]: value is [asdf$%^] but it must be a valid hostname (see RFC 1123)."`;

exports[`with compression throws if invalid referrer whitelist 2`] = `"[compression.referrerWhitelist]: array size is [0], but cannot be smaller than [1]"`;

exports[`with compression throws if referrer whitelist is specified and compression is disabled 1`] = `"cannot use [compression.referrerWhitelist] when [compression.enabled] is set to false"`;
